# lumelo

./: .gitignore  AGENTS.md  README.md
.codex/: config.toml
.codex/agents/: android_provisioning_reviewer.toml  playback_regression_reviewer.toml  repo_explorer.toml  t4_board_reviewer.toml
base/: README.md
docs/: AI_Handoff_Memory.md  Android_Provisioning_App_Progress.md  Audio_Output_Device_Plan.md  Development_Environment_README.md  Development_Progress_Log.md  Handoff_20260419_WebUI_Player_First.md  Milestone_Progress_Document.md  Product_Development_Manual.md  Provisioning_Protocol.md  README.md  T4_Bringup_Checklist.md  T4_USB_eMMC_Firmware_Requirements.md  T4_WiFi_Golden_Baseline.md  WebUI_API_Contract_Plan.md  WebUI_Design_Plan.md
fixtures/: README.md
packaging/: README.md
scripts/: README.md  build-ai-review-docs.py  build-t4-lumelo-rootfs-image.sh  build-t4-smoke-image.sh  build-t4-ssh-bringup-image.sh  compare-t4-wireless-golden.sh  deploy-t4-runtime-update.sh  dev-controld.sh  dev-media-indexd.sh  dev-playbackd.sh  dev-sessiond.sh  dev-up.sh  mount-lumelodev-apfs.sh  orbstack-bootstrap-fono-dev.sh  orbstack-bootstrap-lumelo-dev.sh  package-t4-usb-emmc-official-layout.sh  package-t4-usb-emmc-raw.sh  sync-to-lumelodev-apfs.sh  verify-t4-lumelo-rootfs-image.sh  verify-t4-usb-emmc-official-layout-package.sh  verify-t4-usb-emmc-raw-package.sh
services/rust/crates/media-indexd/: Cargo.toml
services/rust/crates/media-indexd/src/: main.rs
services/rust/crates/playbackd/: Cargo.toml
services/rust/crates/playbackd/src/: main.rs
tests/: README.md
(+140 files in other folders)
