[package]
name = "playbackd"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
dsd-reader = "0.3.1"
ipc-proto = { path = "../ipc-proto" }
media-model = { path = "../media-model" }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
symphonia = { version = "0.5", default-features = false, features = ["aac", "flac", "isomp4", "mp3", "ogg", "pcm", "vorbis", "wav"] }
